Had to change the mobile issue with animation messing the layout, using a css overflow now

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -308,6 +308,7 @@ nav.navbar.bootsnav .navbar-toggle i {
 --------------------------------------*/
 .about {
     padding: 50px 0 100px;
+    overflow: hidden;
 }
 
 .about-content {
@@ -892,6 +893,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {
 .contact {
     background: #f9fbfd;
     padding: 50px 0 100px;
+    overflow: hidden;
 }
 
 .single-contact-box {
